Bugzilla bug 232120: added support for NetBSD's pthread library. The patch is contributed by Shin'ichiro TAYA <taya@netbsd.org>. r=wtc. Modified Files: configure configure.in ptio.c