nsprpub/pr/src/pthreads/ptio.c
@@ -205,7 +205,7 @@ static PRBool _pr_ipv6_v6only_on_by_default;
 #elif defined(IRIX) || defined(OSF1) || defined(AIX) || defined(HPUX) \
     || defined(LINUX) || defined(FREEBSD) || defined(BSDI) || defined(VMS) \
     || defined(NTO) || defined(OPENBSD) || defined(DARWIN) \
-    || defined(UNIXWARE)
+    || defined(UNIXWARE) || defined(NETBSD)
 #define _PRSockOptVal_t void *
 #else
 #error "Cannot determine architecture"
